# Varnan

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  python-publish.yml
tests/: test_category.py  test_generate.py  test_initialize.py  test_link.py  test_show_stats.py  test_task.py  test_varnan.py  test_version.py  test_vrnan.py
tests/data/: test_config.xml
varnan/: __init__.py  __main__.py  category.py  cli.py  ctf.py  exceptions.py  task.py  utils.py  varnan.py
vrnan/: __init__.py  __main__.py  cli.py  vrnan.py
