[tool.poetry]
name = "varnan"
version = "0.1.0"
description = "A CTF-Writeup Tool"
authors = ["AmitGupta7580 <amitgupta758000@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
