[tool.poetry]
name = "Varnan"
version = "0.0.2"
description = "A CTF-Tool"
authors = ["AmitGupta7580 <amitgupta758000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "y"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
