[metadata]
name = vrnan
version = 0.0.1
author = AmitGupta7580 <amitgupta758000@gmail.com>
author_email = amitgupta758000@gmail.com
description = A CTF-Writeup Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AmitGupta7580/Vrnan
project_urls =
    Bug Tracker = https://github.com/AmitGupta7580/Vrnan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src